--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,9 @@
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
+  <script src="{{"/assets/vendor/jquery/jquery.min.js" | relative_url }}"></script>
+  <script src="{{"/assets/vendor/bootstrap/js/bootstrap.min.js" | relative_url }}"></script>
+
   <link rel="stylesheet" href="{{"/assets/vendor/bootstrap/css/bootstrap.min.css" | relative_url }}">
 
   <link rel="stylesheet" href="{{"/assets/vendor/fontawesome-free/css/all.min.css" | relative_url }}">
