--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
             {% endif %}
             <span class="meta">Posted by
               <a href="#">{% if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %}</a>
-              on {{ page.date | date: '%B %d, %Y' }} &middot;
+              on {{ page.date | date: '%B %d, %Y' }}
             </span>
           </div>
         </div>
@@ -29,7 +29,7 @@ layout: default
 
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
+      <div class="col-xl-12 col-lg-12 col-md-12 mx-auto">
 
         {{ content }}
 
