--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -14,12 +14,6 @@
   {%- assign seo_title = seo_title | markdownify | strip_html | strip_newlines | escape_once -%}
 {%- endif -%}
 
-{% if page.canonical_url %}
-  {%- assign canonical_url = page.canonical_url %}
-{% else %}
-  {%- assign canonical_url = page.url | replace: "index.html", "" | absolute_url %}
-{% endif %}
-
 {%- assign seo_description = page.description | default: page.excerpt | default: site.description -%}
 {%- if seo_description -%}
   {%- assign seo_description = seo_description | markdownify | strip_html | newline_to_br | strip_newlines | replace: '<br />', ' ' | escape_once | strip -%}
@@ -60,7 +54,7 @@
 <meta property="og:locale" content="{{ site.locale | replace: "-", "_" | default: "en_US" }}">
 <meta property="og:site_name" content="{{ site.title }}">
 <meta property="og:title" content="{{ page.title | default: site.title | markdownify | strip_html | strip_newlines | escape_once }}">
-<meta property="og:url" content="{{ canonical_url }}">
+<meta property="og:url" content="{{ page.url | replace:'index.html','' | absolute_url }}">
 
 {% if seo_description %}
   <meta property="og:description" content="{{ seo_description }}">
@@ -76,20 +70,20 @@
   <meta name="twitter:site" content="@{{ site.twitter.username | replace: "@", "" }}">
   <meta name="twitter:title" content="{{ page.title | default: site.title | markdownify | strip_html | strip_newlines | escape_once }}">
   <meta name="twitter:description" content="{{ seo_description }}">
-  <meta name="twitter:url" content="{{ canonical_url }}">
+  <meta name="twitter:url" content="{{ page.url | replace:'index.html','' | absolute_url }}">
 
   {% if page_large_image %}
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="{{ page_large_image }}">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="{{ page_large_image }}">
   {% else %}
-    <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary">
     {% if page_teaser_image %}
-      <meta name="twitter:image" content="{{ page_teaser_image }}">
+  <meta name="twitter:image" content="{{ page_teaser_image }}">
     {% endif %}
   {% endif %}
 
   {% if author_twitter %}
-    <meta name="twitter:creator" content="@{{ author_twitter }}">
+  <meta name="twitter:creator" content="@{{ author_twitter }}">
   {% endif %}
 {% endif %}
 
@@ -110,8 +104,6 @@
     <meta property="fb:app_id" content="{{ site.facebook.app_id }}">
   {% endif %}
 {% endif %}
-
-<link rel="canonical" href="{{ canonical_url }}">
 
 {% if paginator.previous_page %}
   <link rel="prev" href="{{ paginator.previous_page_path | absolute_url }}">
