--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,9 +14,10 @@ layout: default
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
             <h1>{{ site.title }}</h1>
-            {% if site.description %}
-            <span class="subheading">{{ site.description }}</span>
-            {% endif %}
+            <span class="subheading">
+              I'm Thomas Delame, an R&D software engineer in Computer Graphics, living in France. 
+              I love to code, in particular in C++, and I make bots for fun.
+            </span>
           </div>
         </div>
       </div>
@@ -25,27 +26,21 @@ layout: default
 
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-
+      <div class="col-xl-12 col-lg-12 col-md-12 mx-auto">
         {{ content }}
 
-        <!-- Home Post List -->
+        <h2> Recent Blog Posts </h2>
         {% for post in site.posts limit : 5 %}
 
-        <article class="post-preview">
+        <article class="post-preview" itemscope itemtype="https://schema.org/CreativeWork">
           <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}">
-            <h2 class="post-title">{{ post.title }}</h2>
-            {% if post.subtitle %}
-            <h3 class="post-subtitle">{{ post.subtitle }}</h3>
-            {% else %}
-            <h3 class="post-subtitle">{{ post.excerpt | strip_html | truncatewords: 15 }}</h3>
-            {% endif %}
+            <h3 class="post-title" itemprop="headline"> {{ post.title }} {% if post.subtitle %} - {{ post.subtitle }} {% endif %} </h3>
+            <p class="post-description" itemprop="description">{{ post.description | strip_html }} </p>
           </a>
           <p class="post-meta">Posted by {{ site.author.name }} on {{ post.date | date: '%B %d, %Y' }} </p>
         </article>
 
         <hr>
-
         {% endfor %}
 
         <!-- Pager -->
