--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,31 +1,19 @@
-<head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv='content-language' content="{{ site.locale | slice: 0,2 | default: en}}">
 
   <link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
-  <title>{% if page.title %}{{ page.title | escape }} - {{ site.title | escape }}{% else %}Thomas Delame{% endif %}</title>
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
+
+  <title>{% if page.title %}{{ page.title | escape }} - {{ site.title | escape }}{% else %}Thomas Delame - Virtual Atom{% endif %}</title>
   
   {% include seo.html %}
-  {% include analytics.html %}
 
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-
-  <script src="{{"/assets/vendor/jquery/jquery.min.js" | relative_url }}"></script>
-  <script src="{{"/assets/vendor/bootstrap/js/bootstrap.min.js" | relative_url }}"></script>
 
   <link rel="stylesheet" href="{{"/assets/vendor/bootstrap/css/bootstrap.min.css" | relative_url }}">
   <link rel="stylesheet" href="{{"/assets/vendor/fontawesome-free/css/all.min.css" | relative_url }}">
   <link rel="stylesheet" href="{{"/assets/main.css" | relative_url }}">
 
-  {% if page.has_code %}
-  <link rel="stylesheet" href="{{"/assets/vendor/highlight/styles/zenburn.css" | relative_url }}">
-  <script src="{{"/assets/vendor/highlight/highlight.pack.js" | relative_url }}""></script>
-  <script>hljs.initHighlightingOnLoad();</script>
-  {% endif %}
-
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
-
-</head>
