--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -25,10 +25,8 @@ layout: default
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-8 col-md-10 mx-auto">
-
+    <div class="col-xl-12 col-lg-12 col-md-12 mx-auto">
       {{ content }}
-
     </div>
   </div>
 </div>
