--- a/_sass/virtual-atom/_post.scss
+++ b/_sass/virtual-atom/_post.scss
@@ -8,11 +8,10 @@
       color: $primary;
     }
     > .post-title {
-      font-size: 30px;
       margin-top: 30px;
       margin-bottom: 10px;
     }
-    > .post-subtitle {
+    > .post-description {
       font-weight: 300;
       margin: 0 0 10px;
     }
