--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,9 +1,10 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
+@charset "utf-8";
 
-@import "styles";
-
+@import "virtual-atom/skins/default";
+@import "virtual-atom";
 
 p {
   text-align: justify;
