Fix html errors on Langton's Ant article

--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -1,4 +1,4 @@
-<!-- begin _includes/seo.html -->
+    <!-- start of seo.html -->
 {%- if site.url -%}
   {%- assign seo_url = site.url | append: site.baseurl -%}
 {%- endif -%}
@@ -145,4 +145,4 @@
 {% if site.naver_site_verification %}
   <meta name="naver-site-verification" content="{{ site.naver_site_verification }}">
 {% endif %}
-<!-- end _includes/seo.html -->
+    <!-- end of seo.html -->
