Add spring22 retrospective article

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@ layout: default
           <div class="page-heading">
             <h1>{{ site.title }}</h1>
             <span class="subheading">
-              I'm Thomas Delame, an R&D software engineer in Computer Graphics, living in France. 
+              I'm Tom Delame, an R&D software engineer in Computer Graphics, living in France.
               I love to code, in particular in C++, and I make bots for fun.
             </span>
           </div>
@@ -33,13 +33,30 @@ layout: default
         {% for post in site.posts limit : 5 %}
 
         <article class="post-preview" itemscope itemtype="https://schema.org/CreativeWork">
+
+          {% if post.background %}
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-4 align-self-center">
+                <img src="{{ post.background | prepend: site.baseurl | replace: '//', '/' }}" class="rounded img-fluid">
+              </div>
+              <div class="col-lg-8 post-preview" >
+                <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}">
+                  <h3 class="post-title" itemprop="headline"> {{ post.title }} {% if post.subtitle %} - {{ post.subtitle }} {% endif %} </h3>
+                  <p class="post-description" itemprop="description">{{ post.description | strip_html }} </p>
+                </a>
+                <p class="post-meta">Posted by {{ site.author.name }} on {{ post.date | date: '%B %d, %Y' }} </p>
+              </div>
+            </div>
+          </div>
+          {% else %}
           <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}">
             <h3 class="post-title" itemprop="headline"> {{ post.title }} {% if post.subtitle %} - {{ post.subtitle }} {% endif %} </h3>
             <p class="post-description" itemprop="description">{{ post.description | strip_html }} </p>
           </a>
           <p class="post-meta">Posted by {{ site.author.name }} on {{ post.date | date: '%B %d, %Y' }} </p>
+          {% endif %}
         </article>
-
         <hr>
         {% endfor %}
 
